# tmpl-agent-platform-v2

./: .gitignore  AGENT_FACTORY_TARGET_DESIGN.md  docker-compose.yml
services/agent-factory/: Dockerfile  pyproject.toml
services/agent-factory/src/: app.py  models.py  service.py
services/agent-runtime/: Dockerfile  pyproject.toml
services/agent-runtime/config/: base.yaml  dev.yaml
services/agent-runtime/src/: run_once.py  state_store.py
services/agent-runtime/src/agents/: chat_responder.py  executor.py  llm_planner.py
services/agent-runtime/src/graph/: build_graph.py
services/agent-runtime/src/platform/: app.py  auth.py  authorization.py  config.py  context.py  langgraph_runner.py  memory.py  tool_gateway_client.py  usecase_config_loader.py
services/agent-runtime/src/platform/agent_types/: chat_agent.py  registry.py  summarizer_agent.py  workflow_agent.py
services/agent-runtime/src/platform/llm/: responder.py
services/agent-runtime/src/platform/memory/: __init__.py  file_memory.py  memory_interface.py
services/agent-runtime/src/platform/observability/: tracer.py
services/agent-runtime/src/platform/tools/: bindings.py  bootstrap.py  discovery.py  registry.py  router.py  specs.py  tool.py  types.py  validation.py
services/agent-runtime/src/usecase/: contract.py
services/agent-runtime/src/usecase/agents/: planner.py
services/agent-runtime/src/usecase/graph/: build_graph.py
services/agent-runtime/src/usecases/: contract.py
services/agent-runtime/src/usecases/tools/: bindings.py
services/agent-runtime/tests/: test_bindings.py  test_smoke.py
(+44 files in other folders)
